--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     box-sizing: border-box;
     background-color: whitesmoke;
 }
@@ -16,15 +17,14 @@ body{
     margin: 13px 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.lista{
+.background-image{
     width: 100%;
+    background-image: url("../imagens/pexels-luis-gomes-546819.jpg");
+    background-size: cover;
+    height: 660px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    background-image: url("../imagens/pexels-luis-gomes-546819.jpg");
-    background-size: contain;
-    height: 600px;
-    padding: 40px;
 }
 .imge{
     width: 100%;
@@ -34,12 +34,12 @@ body{
 }
 .itens{
     max-width: 500px;
-    padding: 50px;
-    margin: auto;
+    padding: 30px;
+    margin: 85px auto 0px auto;
     font-size: 18px;
-    background-color: rgb(27, 21, 102, 0.8);
+    background-color: rgb(27, 21, 102, 0.6);
     color: honeydew;
-    display: block;
+    display: inline-block;
     
 }
 .titulo{
@@ -52,12 +52,13 @@ body{
     font-size: 16px;
     background-color: rgb(27, 21, 102);
     color: honeydew;
-    display: block;
+    float: right;
 }
 .information{
     background-color: rgb(219, 219, 219);
     width: calc(100%-40px);
-    padding: 50px 200px;
+    padding: 100px 10%;
+    display: block;
     text-align: justify;
 }
 .triade{
@@ -66,15 +67,26 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding: 100px 0;
 }
-.triade div{
-    padding: 0;
+.triade > div{
     text-align: center;
     font-size: 18px;
     width: 340px;
-    margin: 50px;
+    margin: 50px auto;
 }
 footer{
     text-align: center;
     text-decoration: none;
+}
+@media only screen and (max-width: 680px){
+    .header{
+        text-align: center;
+    }
+    .background-image{
+        display: block;
+    }
+    .information{
+        padding: 100px 25px;
+    }
 }
